--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
 	<title>Frontend Mentor | Blog preview card</title>
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -14,9 +15,6 @@
 			<img src="assets/images/illustration-article.svg" alt="">
 		</div>
 		<div class="description">
-			<!-- <div class="learning">
-				<p>Learning</p>
-			</div> -->
 			<p class="learning">Learning</p>
 			<p class="date">Published 21 Dec 2023</p>
 			<h1>HTML & CSS foundations</h1>
